BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Test_Plan_vod__c.object
<CustomObject>
    <description>PMO Tool Kit -  used to capture Project Test Plans related to Requirements and Projects</description>
    <fields>
        <fullName>Objective_vod__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regression_Testing_End_vod__c</fullName>
        <label>Regression Testing End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regression_Testing_Start_vod__c</fullName>
        <label>Regression Testing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Project_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Test Plan</relationshipLabel>
        <relationshipName>Test_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Testing_End_vod__c</fullName>
        <label>System Testing End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Testing_Start_vod__c</fullName>
        <label>System Testing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Strategy_vod__c</fullName>
        <label>Test Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UAT_Testing_End_vod__c</fullName>
        <label>UAT Testing End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_Testing_Start_vod__c</fullName>
        <label>UAT Testing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Testing_End_vod__c</fullName>
        <label>Unit Testing End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Testing_Start_vod__c</fullName>
        <label>Unit Testing Start</label>
        <type>Date</type>
    </fields>
    <label>Test Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Test Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>